# cmake_vcpkg_template

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  vcpkg.json
